Modification docuementation: Ajout exemmple de sortie d'errezur typique ELK